--- a/ext/flowable/src/main/resources/org/apache/syncope/client/enduser/pages/Flowable.html
+++ b/ext/flowable/src/main/resources/org/apache/syncope/client/enduser/pages/Flowable.html
@@ -20,36 +20,49 @@
   <wicket:extend>
     <section class="content" wicket:id="content">
       <div class="box">
-        <div id="flowable_wrapper" class="container-fluid password_reset_wrapper">
-          <div class="row form-group col-md-6 col-md-offset-3">
-            <div class="col-md-12 bpmn-process">
-
-              <div class="page-header">
-                <h1>
-                  <wicket:message key="bpmn.process.title">[BPMN_PROCESSES_TITLE]</wicket:message>
-                </h1>
-              </div>
-
+        <div class="row clearfix">
+          <div class="col-md-12">
+            <div class="col-md-6 col-md-offset-3">
               <div>
-                <span wicket:id="bpmnProcesses" class="bpmn-process-span">[BPMN PROCESSES]</span> 
-                <input wicket:id="start" wicket:message="value:start" type="button" class="btn btn-success">
+                <h3 class="box-title"></h3>
               </div>
-
-            </div>
-          </div>
-
-          <div class="row form-group col-md-6 col-md-offset-3">
-            <div>
-              <div class="box">
-                <div class="box-footer no-padding">
-                  <div wicket:id="userRequests" class="box box-solid box-default">
-                    <div wicket:id="userRequestDetails"/>
-                    <li class="divider"></li>
+              <div class="box-body">
+                <div class="box-header formcard">
+                  <header class="card-container card-red">
+                    <h4><wicket:message key="bpmn.process.title">[BPMN_PROCESSES_TITLE]</wicket:message></h4>
+                  </header>
+                  <div class="card-container-body">
+                    <div>
+                      <div class="col-xs-12">
+                        <div class="form-group">
+                          <span wicket:id="bpmnProcesses" class="bpmn-process-span">[BPMN PROCESSES]</span> 
+                          <input wicket:id="start" wicket:message="value:start" type="button" class="btn btn-success">
+                        </div>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
-              <div>
-                <table class="table table-striped table-bordered">
+              <div class="box-body">
+                <div class="box-header formcard">
+                  <header class="card-container card-red">
+                    <h4><wicket:message key="requests.to.be.approved">[ACTIVE REQUEST]</wicket:message></h4>
+                  </header>
+                  <div class="card-container-body">
+                    <div>
+                      <div class="col-xs-12">
+                        <div class="form-group">
+                          <div wicket:id="userRequests">
+                            <div wicket:id="userRequestDetails"/>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="box-footer">
+                <table class="paginator">
                   <tfoot>
                     <tr>
                       <td wicket:id="navigator"></td>
