#7 fix user request

--- a/app/src/main/resources/org/apache/syncope/client/enduser/pages/Login.html
+++ b/app/src/main/resources/org/apache/syncope/client/enduser/pages/Login.html
@@ -83,7 +83,8 @@
         </form>
 
         <div class="text-center login_link">
-          <a wicket:id="self-pwd-reset"><wicket:message key="self-pwd-reset">[SELFPWDRESET]</wicket:message></a>
+          <a wicket:id="self-pwd-reset"><wicket:message key="self-pwd-reset">[SELFPWDRESET]</wicket:message></a><br/>
+          <a wicket:id="self-registration"><wicket:message key="self-registration">[SELFREGISTRATION]</wicket:message></a>
         </div>
       </div>
     </div>
