Fix self registration

--- a/app/src/main/resources/org/apache/syncope/client/enduser/pages/SelfRegistration.html
+++ b/app/src/main/resources/org/apache/syncope/client/enduser/pages/SelfRegistration.html
@@ -26,7 +26,7 @@
             <spam wicket:id="selfRegistrationPanel"></spam>
           </div>
         </div>
-      </div><!-- </div> -->
+      </div>
     </section>
   </wicket:extend>
 </html>
