--- a/common-ui/src/main/resources/org/apache/syncope/client/ui/commons/markup/html/form/AjaxDateFieldPanel.html
+++ b/common-ui/src/main/resources/org/apache/syncope/client/ui/commons/markup/html/form/AjaxDateFieldPanel.html
@@ -22,7 +22,8 @@
       <label wicket:id="field-label">[LABEL]</label><span wicket:id="required"/>
       <span wicket:id="externalAction"/>
     </wicket:enclosure>
-
-    <input wicket:id="field" type="text"></input>
+    <div class="input-group">
+      <input wicket:id="field" type="text"/>
+    </div>
   </wicket:extend>
 </html>
