--- a/common-ui/src/main/resources/org/apache/syncope/client/ui/commons/markup/html/form/AjaxDateTimeFieldPanel.html
+++ b/common-ui/src/main/resources/org/apache/syncope/client/ui/commons/markup/html/form/AjaxDateTimeFieldPanel.html
@@ -27,7 +27,9 @@
   <wicket:extend>
     <wicket:enclosure child="field-label">
       <label wicket:id="field-label">[LABEL]</label><span wicket:id="required"/>
-      <span wicket:id="externalAction"/>
+      <div class="input-group">
+        <span wicket:id="externalAction"/>
+      </div>
     </wicket:enclosure>
 
     <span wicket:id="field"/>
