added password field to the self registration

--- a/app/src/main/resources/org/apache/syncope/client/enduser/panels/any/UserDetails.html
+++ b/app/src/main/resources/org/apache/syncope/client/enduser/panels/any/UserDetails.html
@@ -25,6 +25,7 @@
       <div class="form-group">
         <span wicket:id="username"/>
       </div>
+      <div wicket:id="password"></div>
     </div>
   </wicket:panel>
 </html>
