--- a/app/src/main/resources/org/apache/syncope/client/enduser/pages/EditSecurityQuestion.html
+++ b/app/src/main/resources/org/apache/syncope/client/enduser/pages/EditSecurityQuestion.html
@@ -23,16 +23,12 @@
         <div class="row clearfix">
           <div class="col-md-12">
             <div class="col-md-6 col-md-offset-3">
-              <div>
-                <h3 class="box-title"></h3>
-              </div>
-              <!-- /.box-header -->
               <!-- form start -->
               <form wicket:id="securityQuestionForm" class="form-horizontal">
                 <div class="box-body">
                   <div class="box-header formcard">
                     <header class="card-container card-red">
-                      <h4>Security Question</h4>
+                      <label class="card-header-style">Security Question</label>
                     </header>
                     <div class="card-container-body">
                       <div>
