--- a/app/src/main/resources/org/apache/syncope/client/enduser/panels/ChangePasswordPanel.html
+++ b/app/src/main/resources/org/apache/syncope/client/enduser/panels/ChangePasswordPanel.html
@@ -22,16 +22,12 @@
       <!-- left column -->
       <div class="col-md-12">
         <div class="col-md-6 col-md-offset-3">
-          <div>
-            <h3 class="box-title"></h3>
-          </div>
-          <!-- /.box-header -->
           <!-- form start -->
           <form wicket:id="changePassword" class="form-horizontal">
             <div class="box-body">
               <div class="box-header formcard">
                 <header class="card-container card-red">
-                  <h4>Change Password</h4>
+                  <label class="card-header-style">Change Password</label>
                 </header>
                 <div class="card-container-body">
                   <div>
