--- a/app/src/main/resources/org/apache/syncope/client/enduser/panels/UserFormPanel.html
+++ b/app/src/main/resources/org/apache/syncope/client/enduser/panels/UserFormPanel.html
@@ -20,12 +20,8 @@
   <wicket:panel>
     <!-- general form elements -->
     <div class="col-md-6 col-md-offset-3">
-      <div>
-        <h3 class="box-title"></h3>
-      </div>
-      <!-- /.box-header -->
       <!-- form start -->
-      <form wicket:id="form" role="form">
+      <form wicket:id="form">
         <div class="box-body">
           <span wicket:id="userDetailsPanelCard">[userDetailsPanelCard]</span>
           <span wicket:id="groupsPanelCard">[groupsPanelCard]</span>
