--- a/app/src/main/resources/org/apache/syncope/client/enduser/widgets/UserProfileWidget.html
+++ b/app/src/main/resources/org/apache/syncope/client/enduser/widgets/UserProfileWidget.html
@@ -21,7 +21,7 @@
       <div class="box-body" wicket:id="userProfile">
         <div class="box-header formcard col-md-4">
           <header class="card-container card-red">
-            <h4><wicket:message key="welcome"/><label wicket:id="welcome"/></h4>
+            <label class="card-header-style"><wicket:message key="welcome"/><b><label class="card-header-style" wicket:id="welcome"/></b></label>
           </header>
           <div class="card-container-body">
             <div>
