--- a/common-ui/src/main/resources/org/apache/syncope/client/ui/commons/panels/CardPanel.html
+++ b/common-ui/src/main/resources/org/apache/syncope/client/ui/commons/panels/CardPanel.html
@@ -20,7 +20,7 @@
   <wicket:panel>
     <div class="box-header formcard">
       <header class="card-container card-red">
-        <h4><span wicket:id="cardLabel">[CARD LABEL]</span></h4>
+        <label class="card-header-style" wicket:id="cardLabel">[CARD LABEL]</label>
       </header>
       <div class="card-container-body">
         <span wicket:id="contentPanel">[CONTENT PANEL]</span>
