--- a/app/src/main/resources/org/apache/syncope/client/enduser/panels/Sidebar.html
+++ b/app/src/main/resources/org/apache/syncope/client/enduser/panels/Sidebar.html
@@ -26,7 +26,7 @@
       <ul class="sidebar-menu">
         <li wicket:id="homeLI">
           <a href="#" wicket:id="home">
-            <i class="fa fa-home"></i>
+            <i class="fa fa-id-card"></i>
             <span><wicket:message key="home"/></span>
           </a>
         </li>
