#11 Change password page

--- a/app/src/main/resources/org/apache/syncope/client/enduser/panels/ChangePasswordPanel.html
+++ b/app/src/main/resources/org/apache/syncope/client/enduser/panels/ChangePasswordPanel.html
@@ -27,7 +27,7 @@
             <div class="box-body">
               <div class="box-header formcard">
                 <header class="card-container card-red">
-                  <label class="card-header-style">Change Password</label>
+                  <label class="card-header-style"><wicket:message key="editchangepassword"/></label>
                 </header>
                 <div class="card-container-body">
                   <div>
