--- a/app/src/main/resources/org/apache/syncope/client/enduser/pages/Login.html
+++ b/app/src/main/resources/org/apache/syncope/client/enduser/pages/Login.html
@@ -61,6 +61,12 @@
 
         <form class="form-signin" wicket:id="login">
           <fieldset class="form-group">
+            <input type="text" wicket:id="username" class="form-control" 
+                   wicket:message="placeholder:username" required="required" autofocus="autofocus" />
+
+            <input type="password" wicket:id="password" class="form-control" 
+                   wicket:message="placeholder:password" required="required" />
+
             <fieldset class="input-group">
               <select wicket:id="language"/>
             </fieldset>
