--- a/app/src/main/resources/org/apache/syncope/client/enduser/pages/SelfConfirmPasswordReset.html
+++ b/app/src/main/resources/org/apache/syncope/client/enduser/pages/SelfConfirmPasswordReset.html
@@ -23,35 +23,26 @@
       <div class="box">
         <div id="confirm_password_reset" class="container-fluid password_reset_wrapper">
 
-          <div class="row">
-            <div class="col-md-6 col-md-offset-3">
+          <div class="col-md-6 col-md-offset-3">
+            <div class="page-header">
+              <h1>
+                <wicket:message key="confirm-reset">[CONFIRM_PASSWORD_RESET]</wicket:message>
+              </h1>
+            </div>
 
-              <div class="page-header">
-                <h1>
-                  <wicket:message key="confirm-reset">[CONFIRM_PASSWORD_RESET]</wicket:message>
-                </h1>
+            <form wicket:id="selfConfirmPwdResetForm">
+              <div class="box-body">
+                <span wicket:id="selfConfirmPasswordResetPanelCard">[CONFIRM_PASSWORD_RESET]</span>
               </div>
 
-              <form wicket:id="selfConfirmPwdResetForm" class="form-horizontal">
-                <fieldset class="enduser_fieldset">
-                  <span id="password" wicket:id="password" class="form-group input-md"/>
-                  <span id="confirmPassword" wicket:id="confirmPassword" class="form-group input-md"/>
-
-                  <div class="password_reset_buttons form-group">
-                    <div class="col-md-6">
-                      <input id="cancel_button" wicket:id="cancel" type="submit" wicket:message="value:cancel" 
-                             class="btn btn-default pull-left"/>
-                    </div>
-                    <div class="col-md-6">
-                      <input id="submit_button" wicket:id="submit" type="submit" wicket:message="value:submit" 
-                             class="btn btn-primary pull-right"/>
-                    </div>
-                  </div>
-                </fieldset>
-              </form>
-
-            </div> <!-- col -->
-          </div> <!-- row -->
+              <div class="box-footer">
+                <input id="cancel_button" wicket:id="cancel" type="submit" wicket:message="value:cancel" 
+                       class="btn btn-default pull-left"/>
+                <input id="submit_button" wicket:id="submit" type="submit" wicket:message="value:submit" 
+                       class="btn btn-primary pull-right"/>
+              </div>
+            </form>
+          </div> <!-- col -->
         </div>
       </div>
     </section>
