--- a/app/src/main/resources/org/apache/syncope/client/enduser/pages/SelfPasswordReset.html
+++ b/app/src/main/resources/org/apache/syncope/client/enduser/pages/SelfPasswordReset.html
@@ -23,21 +23,27 @@
       <div class="box">
         <div id="password_reset" class="container-fluid password_reset_wrapper">
 
-          <div class="row">
-            <div class="col-md-6 col-md-offset-3">
+          <div class="col-md-6 col-md-offset-3">
 
-              <div class="page-header">
-                <h1>
-                  <wicket:message key="password-reset">[PASSWORD_RESET]</wicket:message>
-                </h1>
+            <div class="page-header">
+              <h1>
+                <wicket:message key="password-reset">[PASSWORD_RESET]</wicket:message>
+              </h1>
+            </div>
+
+            <form wicket:id="selfPwdResetForm">
+              <div class="box-body">
+                <span wicket:id="selfPasswordResetPanelCard">[PASSWORD_RESET]</span>
               </div>
 
-              <form wicket:id="selfPwdResetForm" class="form-horizontal">
-                <div wicket:id="selfPwdResetPanel"/>
-              </form>
-
-            </div> <!-- col -->
-          </div> <!-- row -->
+              <div class="password_reset_buttons form-group">
+                <input wicket:id="cancel" type="submit" wicket:message="value:cancel" 
+                       class="btn btn-default pull-left"/>
+                <input wicket:id="submit" type="submit" wicket:message="value:submit" 
+                       class="btn btn-success pull-right"/>
+              </div>
+            </form>
+          </div> <!-- col -->
         </div>
       </div>
     </section>
