--- a/app/src/main/resources/org/apache/syncope/client/enduser/panels/SelfPwdResetPanel.html
+++ b/app/src/main/resources/org/apache/syncope/client/enduser/panels/SelfPwdResetPanel.html
@@ -46,6 +46,16 @@
         <span wicket:id="captchaPanel">[CAPTCHA]</span>
       </div>
 
+      <div class="password_reset_buttons form-group">
+        <div class="col-md-6">
+          <input wicket:id="cancel" type="submit" wicket:message="value:cancel" 
+                 class="btn btn-default pull-left"/>
+        </div>
+        <div class="col-md-6">
+          <input wicket:id="submit" type="submit" wicket:message="value:submit" 
+                 class="btn btn-success pull-right"/>
+        </div>
+      </div>
     </fieldset>
 
   </wicket:panel>
