--- a/app/src/main/resources/org/apache/syncope/client/enduser/pages/SelfRegistration.html
+++ b/app/src/main/resources/org/apache/syncope/client/enduser/pages/SelfRegistration.html
@@ -23,7 +23,7 @@
         <!-- left column -->
         <div class="col-md-12"> 
           <div class="col-md-12 column box">
-            <spam wicket:id="selfRegistrationPanel"></spam>
+            <span wicket:id="selfRegistrationPanel"></span>
           </div>
         </div>
       </div>
