--- a/app/src/main/resources/org/apache/syncope/client/enduser/pages/SelfResult.html
+++ b/app/src/main/resources/org/apache/syncope/client/enduser/pages/SelfResult.html
@@ -28,14 +28,14 @@
 
               <div class="page-header">
                 <h1>
-                  <spam wicket:id="resultTitle">[LABEL]</spam>
+                  <span wicket:id="resultTitle">[LABEL]</span>
                 </h1>
 
               </div>
               <fieldset class="enduser_fieldset">
 
                 <div class="form-group input-md">
-                  <spam wicket:id="resultMessage">[LABEL]</spam>
+                  <span wicket:id="resultMessage">[LABEL]</span>
                   <a wicket:id="login"><wicket:message key="login">[login]</wicket:message></a>
                 </div>
 
