--- a/app/src/main/resources/org/apache/syncope/client/enduser/pages/Dashboard.html
+++ b/app/src/main/resources/org/apache/syncope/client/enduser/pages/Dashboard.html
@@ -19,7 +19,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://wicket.apache.org">
   <wicket:extend>
     <section class="content" wicket:id="content">
-      <spam wicket:id="userProfileInfo"></spam>
+      <span wicket:id="userProfileInfo"></span>
     </section>
   </wicket:extend>
 </html>
