--- a/app/src/main/resources/org/apache/syncope/client/enduser/pages/MustChangePassword.html
+++ b/app/src/main/resources/org/apache/syncope/client/enduser/pages/MustChangePassword.html
@@ -20,7 +20,7 @@
   <wicket:extend>
     <section class="content" wicket:id="content">
       <div class="box">
-        <spam wicket:id="changePasswordPanel">[CHANGE_PASSWORD_PANEL]</spam>
+        <span wicket:id="changePasswordPanel">[CHANGE_PASSWORD_PANEL]</span>
       </div>
     </section>
   </wicket:extend>
