--- a/common-ui/src/main/resources/org/apache/syncope/client/ui/commons/markup/html/form/AjaxPasswordFieldPanel.html
+++ b/common-ui/src/main/resources/org/apache/syncope/client/ui/commons/markup/html/form/AjaxPasswordFieldPanel.html
@@ -27,7 +27,8 @@
         <span wicket:id="externalAction"/>
       </wicket:enclosure>
       <input type="password" class="form-control" wicket:id="passwordField" />
-      <input type="checkbox" wicket:id="togglePassword" onclick="switchPassword(this)">
+
+      <input type="checkbox" wicket:id="togglePassword" onclick="switchPassword(this)"/>
       <wicket:message key="togglePassword" />
       <script>
         function switchPassword(element) {
@@ -37,9 +38,9 @@
           }
           let type = inputField.attr('type');
           if (type !== 'text') {
-              $(inputField).attr("type", "text");
+            $(inputField).attr("type", "text");
           } else {
-              $(inputField).attr("type", "password");
+            $(inputField).attr("type", "password");
           }
         }
       </script>
