--- a/common-ui/src/main/resources/org/apache/syncope/client/ui/commons/markup/html/form/AjaxPasswordFieldPanel.html
+++ b/common-ui/src/main/resources/org/apache/syncope/client/ui/commons/markup/html/form/AjaxPasswordFieldPanel.html
@@ -18,7 +18,7 @@
 -->
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://wicket.apache.org">
   <head>
-    <title>Ajaxt password field panel</title>
+    <title>Ajax password field panel</title>
   </head>
   <body>
     <wicket:extend>
@@ -27,6 +27,23 @@
         <span wicket:id="externalAction"/>
       </wicket:enclosure>
       <input type="password" class="form-control" wicket:id="passwordField" />
+
+      <input type="checkbox" wicket:id="togglePassword" onclick="switchPassword(this)"/>
+      <wicket:message key="togglePassword" />
+      <script>
+        function switchPassword(element) {
+          let inputField = $(element).prev();
+          if (inputField.prop("tagName").toLowerCase() !== "input") {
+            inputField = $(inputField).prev();
+          }
+          let type = inputField.attr('type');
+          if (type !== 'text') {
+            $(inputField).attr("type", "text");
+          } else {
+            $(inputField).attr("type", "password");
+          }
+        }
+      </script>
     </wicket:extend>
   </body>
 </html>
