Rework password toggle to use a hidden-eye button

--- a/common-ui/src/main/resources/org/apache/syncope/client/ui/commons/markup/html/form/AjaxPasswordFieldPanel.html
+++ b/common-ui/src/main/resources/org/apache/syncope/client/ui/commons/markup/html/form/AjaxPasswordFieldPanel.html
@@ -22,20 +22,22 @@
   </head>
   <body>
     <wicket:extend>
+      <div class="col-xs-8">
       <wicket:enclosure child="field-label">
         <label wicket:id="field-label">[LABEL]</label><span wicket:id="required"/>
         <span wicket:id="externalAction"/>
       </wicket:enclosure>
+      </div>
+      <div class="col-xs-11" style="padding-right: 0">
       <input type="password" class="form-control" wicket:id="passwordField" />
-
-      <input type="checkbox" wicket:id="togglePassword" onclick="switchPassword(this)"/>
-      <wicket:message key="togglePassword" />
+      </div>
+      <div class="col-xs-1">
+      <button type="button" class="btn btn-circle btn-sm fa fa-eye" wicket:id="togglePassword" onclick="switchPassword(this); return false;">
+      </button>
+      </div>
       <script>
         function switchPassword(element) {
-          let inputField = $(element).prev();
-          if (inputField.prop("tagName").toLowerCase() !== "input") {
-            inputField = $(inputField).prev();
-          }
+          let inputField = $(element).parent().prev().children("input");
           let type = inputField.attr('type');
           if (type !== 'text') {
             $(inputField).attr("type", "text");
