Rework password toggle to use a hidden-eye button

--- a/common-ui/src/main/resources/org/apache/syncope/client/ui/commons/markup/html/form/AjaxPasswordFieldPanel.html
+++ b/common-ui/src/main/resources/org/apache/syncope/client/ui/commons/markup/html/form/AjaxPasswordFieldPanel.html
@@ -40,9 +40,11 @@
           let inputField = $(element).parent().prev().children("input");
           let type = inputField.attr('type');
           if (type !== 'text') {
-            $(inputField).attr("type", "text");
+            $(inputField).attr("type", "text")
+            $(element).addClass('fa-eye-slash').removeClass('fa-eye');
           } else {
-            $(inputField).attr("type", "password");
+            $(inputField).attr("type", "password")
+            $(element).removeClass('fa-eye-slash').addClass('fa-eye');;
           }
         }
       </script>
